--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>social-networks</title>
-    <link href=/static/css/app.f91cfb925c784c3d51d0c1d631ce5b20.css rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src=/static/js/manifest.675fc0e71e043a09515b.js></script>
-<script type=text/javascript src=/static/js/vendor.0c7bb0cdb720704874b6.js></script>
-<script type=text/javascript src=/static/js/app.7bad8a4e56b522b140cd.js></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>social-networks</title><link href=/static/css/app.14aeaa6969ba82ff30d6a5a8f250d439.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.0393a3ad5a279f705ed2.js></script><script type=text/javascript src=/static/js/vendor.f5e3b0a18a4bdfc8f1b8.js></script><script type=text/javascript src=/static/js/app.c11af0137f3ef114c924.js></script></body></html>
