--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>social-networks</title>
-    <link href=/static/css/app.583d86f97a7ba4269314364bacd1f342.css rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src=/static/js/manifest.fb42e36bb240041bf357.js></script>
-<script type=text/javascript src=/static/js/vendor.2fa66f42f6c05d3245cb.js></script>
-<script type=text/javascript src=/static/js/app.98e435f527cff12f57f5.js></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>social-networks</title><link href=/static/css/app.284f93b519e271ff61dd7031039de9db.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.242e6bee1caa3b8b174f.js></script><script type=text/javascript src=/static/js/vendor.b5593bca032e38f06062.js></script><script type=text/javascript src=/static/js/app.cbcc127c90c1b1e77135.js></script></body></html>
